[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
